{
  "version": 4,
  "terraform_version": "0.12.5",
  "serial": 29,
  "lineage": "374aadcc-ded4-eb39-1779-7c744efb9c12",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "vmss",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "load_balancer_rules": [
                  "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/loadBalancingRules/http"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip"
              }
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "location": "koreasouth",
            "name": "vmss-lb",
            "resource_group_name": "user18-final",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_public_ip.vmss",
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "bpepool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/0/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/1/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/3/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/backendAddressPools/BackEndAddressPool",
            "load_balancing_rules": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "BackEndAddressPool",
            "resource_group_name": "user18-final"
          },
          "depends_on": [
            "azurerm_lb.vmss",
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "vmss",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/probes/ssh-running-probe",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/loadBalancingRules/http"
            ],
            "loadbalancer_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "ssh-running-probe",
            "number_of_probes": 2,
            "port": 80,
            "protocol": "Tcp",
            "resource_group_name": "user18-final"
          },
          "depends_on": [
            "azurerm_lb.vmss",
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "lbnatrule",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/backendAddressPools/BackEndAddressPool",
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "frontend_ip_configuration_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/loadBalancingRules/http",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb",
            "name": "http",
            "probe_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/loadBalancers/vmss-lb/probes/ssh-running-probe",
            "protocol": "Tcp",
            "resource_group_name": "user18-final"
          },
          "depends_on": [
            "azurerm_lb.vmss",
            "azurerm_lb_backend_address_pool.bpepool",
            "azurerm_lb_probe.vmss",
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "dbnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkInterfaces/DB-nic",
            "ip_configuration": [
              {
                "name": "IPConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/DB-public-ip",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet1"
              }
            ],
            "location": "koreasouth",
            "name": "DB-nic",
            "private_ip_address": "18.0.1.8",
            "private_ip_addresses": [
              "18.0.1.8"
            ],
            "resource_group_name": "user18-final",
            "tags": {
              "environment": "codelab"
            }
          },
          "depends_on": [
            "azurerm_public_ip.dbip",
            "azurerm_resource_group.user18group",
            "azurerm_subnet.mysubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jumpboxnic",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkInterfaces/jumpbox-nic",
            "ip_configuration": [
              {
                "name": "IPConfiguration",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/jumpbox-public-ip",
                "subnet_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet1"
              }
            ],
            "location": "koreasouth",
            "mac_address": "00-22-48-06-65-47",
            "name": "jumpbox-nic",
            "private_ip_address": "18.0.1.6",
            "private_ip_addresses": [
              "18.0.1.6"
            ],
            "resource_group_name": "user18-final",
            "tags": {
              "environment": "codelab"
            },
            "virtual_machine_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachines/jumpbox"
          },
          "depends_on": [
            "azurerm_public_ip.jumpbox",
            "azurerm_resource_group.user18group",
            "azurerm_subnet.mysubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secGroup",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "location": "koreasouth",
            "name": "myNetworkSecurityGroup",
            "resource_group_name": "user18-final",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "secGroup2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2",
            "location": "koreasouth",
            "name": "myNetworkSecurityGroup2",
            "resource_group_name": "user18-final",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "db",
                "priority": 3001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 2001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "dbip",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/DB-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.204.242",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "DB-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "user18-final",
            "sku": "Basic",
            "tags": {
              "environment": "codelab"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jumpbox",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "i79nuumq70user18-jump-ssh",
            "fqdn": "i79nuumq70user18-jump-ssh.koreasouth.cloudapp.azure.com",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/jumpbox-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.153.13",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "jumpbox-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "user18-final",
            "sku": "Basic",
            "tags": {
              "environment": "codelab"
            }
          },
          "depends_on": [
            "azurerm_resource_group.user18group",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vmss",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "domain_name_label": "i79nuumq70user18",
            "fqdn": "i79nuumq70user18.koreasouth.cloudapp.azure.com",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/publicIPAddresses/vmss-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.231.193.175",
            "ip_version": "IPv4",
            "location": "koreasouth",
            "name": "vmss-public-ip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "user18-final",
            "sku": "Basic"
          },
          "depends_on": [
            "azurerm_resource_group.user18group",
            "random_string.fqdn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mysubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "18.0.1.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet1",
            "ip_configurations": [
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/0/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/1/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Compute/virtualMachineScaleSets/vmssscalesetuser15/virtualMachines/3/networkInterfaces/terraformnetworkprofile/ipConfigurations/IPConfiguration",
              "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkInterfaces/jumpbox-nic/ipConfigurations/IPConfiguration"
            ],
            "name": "MySubnet1",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup",
            "resource_group_name": "user18-final",
            "virtual_network_name": "vnetwork"
          },
          "depends_on": [
            "azurerm_network_security_group.secGroup",
            "azurerm_resource_group.user18group",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mysubnet2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "18.0.2.0/24",
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet2",
            "name": "MySubnet2",
            "network_security_group_id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2",
            "resource_group_name": "user18-final",
            "virtual_network_name": "vnetwork"
          },
          "depends_on": [
            "azurerm_network_security_group.secGroup2",
            "azurerm_resource_group.user18group",
            "azurerm_virtual_network.vnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnetwork",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "18.0.0.0/16"
            ],
            "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork",
            "location": "koreasouth",
            "name": "vnetwork",
            "resource_group_name": "user18-final",
            "subnet": [
              {
                "address_prefix": "18.0.1.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet1",
                "name": "MySubnet1",
                "security_group": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup"
              },
              {
                "address_prefix": "18.0.2.0/24",
                "id": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/virtualNetworks/vnetwork/subnets/MySubnet2",
                "name": "MySubnet2",
                "security_group": "/subscriptions/e0fae348-f6c2-45f5-87b7-c41c22782d8f/resourceGroups/user18-final/providers/Microsoft.Network/networkSecurityGroups/myNetworkSecurityGroup2"
              }
            ]
          },
          "depends_on": [
            "azurerm_resource_group.user18group"
          ]
        }
      ]
    }
  ]
}